k8s-services/api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-api-lb
spec:
  selector:
    app: kraken-api
  ports:
    - port: 443
      targetPort: 8888
  type: LoadBalancer
