k8s-services/kraken-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-api-service
  namespace: sandbox
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8888
  selector:
    app: kraken-api
