k8s-services/kraken-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-web-service
  namespace: sandbox
spec:
  type: NodePort  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: kraken-web
