k8s-services/postgres-service.yaml
# Only use this in development.
# Leaving this out of k8s will disable access to the database from the outside,
# but will still enable the api to connect to the database

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: sandbox
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
