k8s-services/web-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-web-lb
spec:
  selector:
    app: kraken-web
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
