k8s-services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraken-ingress
  annotations:
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: kraken.com
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  rules:
    - host: kraken.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kraken-web-lb
                port:
                  number: 80
          # - path: /api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: kraken-api-lb
          #       port:
          #         number: 443
  tls:
    - hosts:
      - kraken.com
      secretName: myingress-cert
